# razer-control-center

./: Cargo.toml  README.md
cli/: Cargo.toml
common/: Cargo.toml
common/src/: hw.rs  lib.rs
common/src/effects/: mod.rs
common/src/keyboard/: mod.rs
daemon/: Cargo.toml
daemon/src/: chroma.rs  device.rs  main.rs  razer.rs
gui/: Cargo.toml
